--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int05/int05-3/int05-3.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int05/int05-3/int05-3.component.html
@@ -26,18 +26,18 @@
 
       <div class="ui center aligned grid">
           <div class="eight wide column">
-          <button class="ui mini primary button" (click)="uploadFile()">
+          <a class="ui mini primary button" (click)="uploadFile()">
             <i class="upload icon"></i>
             อัพโหลด
-          </button>
-          <button class="ui mini button" (click)="clearFile()">
+          </a>
+          <a class="ui mini button" (click)="clearFile()">
             <i class="trash outline icon"></i>
             ลบไฟล์
-          </button>
-          <button class="ui mini primary button">
-              <i class="add icon"></i>
-              เพิ่มข้อมูล
-            </button>
+          </a>
+          <a class="ui mini primary button" routerLink="/int05-3-1">
+            <i class="add icon"></i>
+            เพิ่มข้อมูล
+          </a>
         </div>
       </div>
     </div>
