--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int05/int05-1/int05-1-1/int05-1-1-2/int05-1-1-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int05/int05-1/int05-1-1/int05-1-1-2/int05-1-1-2.component.html
@@ -1,253 +1,280 @@
 <div class="ui grid">
-  <div class="sixteen wide column">
-    <h2 class="ui header">สร้างกระดาษทำการ ภาษีสรรพสามิต</h2>
+    <div class="sixteen wide column">
+        <h2 class="ui header">แก้ไขแสตมป์รายปีงบประมาณ</h2>
 
-    <div class="ui top attached header">
-      <span>ข้อมูลกระดาษทำการ ภาษีสรรพสามิต</span>
-    </div>
+        <div class="ui top attached header">
+            <span>ตรวจสอบแสตมป์รายปีงบประมาณ</span>
+        </div>
 
-    <div class="ui attached segment">
-      <div class="ui form">
-        <div class="inline fields">
-          <div class="three wide field">
-            <label class="">รหัส</label>
-          </div>
-          <div class="three wide  field">
-            <input type="text" placeholder="" value="12/6/2560">
-          </div>
+        <div class="ui attached segment">
+            <div class="ui form">
+                <div class="inline fields">
+                    <div class="three wide field">
+                        <label class="">รหัส</label>
+                    </div>
+                    <div class="three wide  field">
+                        <input type="text" placeholder="">
+                    </div>
 
-          <div class="two wide field">
-            <label class="">ตุลาคม รับ (ดวง) </label>
+                    <div class="two wide field">
+                        <label class="">ตุลาคม รับ (ดวง) </label>
 
-          </div>
-          <div class="three wide  field">
-            <input type="text" placeholder="" value="">
-          </div>
-          <div class="two wide field">
-            <label class="custom-label-w-15">รวมรับ-จ่ายปีนี้
+                    </div>
+                    <div class="three wide  field">
+                        <input type="text" placeholder="" value="">
+                    </div>
+                    <div class="two wide field">
+                        <label class="custom-label-w-15">รวมรับ-จ่ายปีนี้
               <br>(ต.ค. - ก.ย.) รับ (ดวง)
             </label>
-          </div>
-          <div class="three wide  field">
-            <input type="text" placeholder="" value="1">
-          </div>
-        </div>
+                    </div>
+                    <div class="three wide  field">
+                        <input type="text" placeholder="" value="1">
+                    </div>
+                </div>
 
 
-        <div class="inline fields">
-          <div class="three wide field">
-          </div>
-          <div class="three wide  field">
-          </div>
-          <div class="two wide field">
-            <label class="">ตุลาคม จ่าย (ดวง)
+                <div class="inline fields">
+                    <div class="three wide field">
+                    </div>
+                    <div class="three wide  field">
+                    </div>
+                    <div class="two wide field">
+                        <label class="">ตุลาคม จ่าย (ดวง)
             </label>
-          </div>
-          <div class="three wide  field">
-            <input type="text" placeholder="" value="">
-          </div>
-          <div class="two wide field">
-            <label class="custom-label-w-15">ค่าพิมพ์แสตมป์ (บาท)
+                    </div>
+                    <div class="three wide  field">
+                        <input type="text" placeholder="" value="">
+                    </div>
+                    <div class="two wide field">
+                        <label class="custom-label-w-15">ค่าพิมพ์แสตมป์ (บาท)
             </label>
-          </div>
-          <div class="three wide  field">
-            <input type="text" placeholder="" value="10000">
-          </div>
-        </div>
+                    </div>
+                    <div class="three wide  field">
+                        <input type="text" placeholder="" value="10000">
+                    </div>
+                </div>
 
 
-        <div class="inline fields">
-          <div class="three wide field">
-            <label> ชนิดแสตมป์/ขนาดบรรจุ
+                <div class="inline fields">
+                    <div class="three wide field">
+                        <label> ชนิดแสตมป์/ขนาดบรรจุ
             </label>
-          </div>
-          <div class="three wide  field">
-            <input type="text" placeholder="" value="สาขาแจ้งห่ม">
-          </div>
+                    </div>
+                    <div class="three wide  field">
+                        <input type="text" placeholder="" value="สาขาแจ้งห่ม">
+                    </div>
 
-          <div class="two wide field">
-          </div>
-          <div class="three wide  field">
-          </div>
-          <div class="two wide field">
-            <label class="custom-label-w-15">จ่าย (ดวง)
+                    <div class="two wide field">
+                    </div>
+                    <div class="three wide  field">
+                    </div>
+                    <div class="two wide field">
+                        <label class="custom-label-w-15">จ่าย (ดวง)
             </label>
-          </div>
-          <div class="three wide  field">
-            <input type="text" placeholder="" value="3.75">
-          </div>
-        </div>
+                    </div>
+                    <div class="three wide  field">
+                        <input type="text" placeholder="" value="3.75">
+                    </div>
+                </div>
 
 
 
-        <div class="inline fields">
-          <div class="three wide field">
+                <div class="inline fields">
+                    <div class="three wide field">
 
-          </div>
-          <div class="three wide  field">
-          </div>
+                    </div>
+                    <div class="three wide  field">
+                    </div>
 
-          <div class="two wide field">
-            <label class="">พฤศจิกายน รับ (ดวง)
+                    <div class="two wide field">
+                        <label class="">พฤศจิกายน รับ (ดวง)
             </label>
-          </div>
-          <div class="three wide  field">
-            <input type="text" placeholder="" value="3.11">
-          </div>
-          <div class="two wide field">
-            <label class="custom-label-w-15">ค่าพิมพ์แสตมป์ (บาท)
+                    </div>
+                    <div class="three wide  field">
+                        <input type="text" placeholder="" value="3.11">
+                    </div>
+                    <div class="two wide field">
+                        <label class="custom-label-w-15">ค่าพิมพ์แสตมป์ (บาท)
             </label>
-          </div>
-          <div class="three wide  field">
-            <input type="text" placeholder="" value="37500">
-          </div>
-        </div>
+                    </div>
+                    <div class="three wide  field">
+                        <input type="text" placeholder="" value="37500">
+                    </div>
+                </div>
 
-        <div class="inline fields">
-          <div class="four wide field">
-            <label class=""> คงเหลือยกมาจากปีก่อน จำนวนแสตมป์ (ดวง)
+                <div class="inline fields">
+                    <div class="four wide field">
+                        <label class=""> คงเหลือยกมาจากปีก่อน จำนวนแสตมป์ (ดวง)
             </label>
-          </div>
-          <div class="two wide  field">
-            <input type="text" placeholder="" value="">
-          </div>
+                    </div>
+                    <div class="two wide  field">
+                        <input type="text" placeholder="" value="">
+                    </div>
 
-          <div class="two wide field">
-            <label class="">ตุลาคม รับ (ดวง) </label>
+                    <div class="two wide field">
+                        <label class="">พฤศจิกายน จ่าย (ดวง) </label>
 
-          </div>
-          <div class="three wide  field">
-            <input type="text" placeholder="" value="">
-          </div>
-          <div class="two wide field">
-          </div>
-          <div class="three wide  field">
-          </div>
-        </div>
+                    </div>
+                    <div class="three wide  field">
+                        <input type="text" placeholder="" value="">
+                    </div>
+                    <div class="two wide field">
+                    </div>
+                    <div class="three wide  field">
+                    </div>
+                </div>
 
-        <div class="inline fields">
-          <div class="three wide field">
-          </div>
-          <div class="three wide  field">
-          </div>
+                <div class="inline fields">
+                    <div class="three wide field">
+                    </div>
+                    <div class="three wide  field">
+                    </div>
 
-          <div class="two wide field">
-          </div>
-          <div class="three wide  field">
-          </div>
-          <div class="two wide field">
-            <label class="custom-label-w-15">รวมทั้งปีงบประมาณ รับ (ดวง)
+                    <div class="two wide field">
+                    </div>
+                    <div class="three wide  field">
+                    </div>
+                    <div class="two wide field">
+                        <label class="custom-label-w-15">รวมทั้งปีงบประมาณ รับ (ดวง)
             </label>
-          </div>
-          <div class="three wide  field">
-            <input type="text" placeholder="" value="">
-          </div>
-        </div>
+                    </div>
+                    <div class="three wide  field">
+                        <input type="text" placeholder="" value="">
+                    </div>
+                </div>
 
-        <div class="inline fields">
-          <div class="four wide field">
-            <label class="">ค่าพิมพ์แสตมป์ (บาท)
+                <div class="inline fields">
+                    <div class="four wide field">
+                        <label class="">ค่าพิมพ์แสตมป์ (บาท)
             </label>
-          </div>
-          <div class="two wide  field">
-            <input type="text" placeholder="" value="">
-          </div>
+                    </div>
+                    <div class="two wide  field">
+                        <input type="text" placeholder="" value="">
+                    </div>
 
-          <div class="two wide field">
-            <label class="">ธันวาคม รับ (ดวง)
+                    <div class="two wide field">
+                        <label class="">ธันวาคม รับ (ดวง)
             </label>
 
-          </div>
-          <div class="three wide  field">
-            <input type="text" placeholder="" value="">
-          </div>
-          <div class="two wide field">
-            <label class="custom-label-w-15">ค่าพิมพ์แสตมป์ (บาท)
+                    </div>
+                    <div class="three wide  field">
+                        <input type="text" placeholder="" value="">
+                    </div>
+                    <div class="two wide field">
+                        <label class="custom-label-w-15">ค่าพิมพ์แสตมป์ (บาท)
             </label>
-          </div>
-          <div class="three wide  field">
-            <input type="text" placeholder="" value="">
-          </div>
-        </div>
+                    </div>
+                    <div class="three wide  field">
+                        <input type="text" placeholder="" value="">
+                    </div>
+                </div>
 
-        <div class="inline fields">
-          <div class="three wide field">
-          </div>
-          <div class="three wide  field">
-          </div>
+                <div class="inline fields">
+                    <div class="three wide field">
+                    </div>
+                    <div class="three wide  field">
+                    </div>
 
-          <div class="two wide field">
-            <label class="">จ่าย (ดวง) </label>
-          </div>
-          <div class="three wide  field">
-            <input type="text" placeholder="" value="30000">
-          </div>
-          <div class="two wide field">
-            <label class="custom-label-w-15">จ่าย (ดวง)
+                    <div class="two wide field">
+                        <label class="">ธันวาคม จ่าย (ดวง) </label>
+                    </div>
+                    <div class="three wide  field">
+                        <input type="text" placeholder="" value="30000">
+                    </div>
+                    <div class="two wide field">
+                        <label class="custom-label-w-15">จ่าย (ดวง)
             </label>
-          </div>
-          <div class="three wide  field">
-            <input type="text" placeholder="" value="">
-          </div>
-        </div>
+                    </div>
+                    <div class="three wide  field">
+                        <input type="text" placeholder="" value="">
+                    </div>
+                </div>
 
-        <div class="inline fields">
-          <div class="three wide field">
-          </div>
-          <div class="three wide  field">
-          </div>
+                <div class="inline fields">
+                    <div class="three wide field">
+                    </div>
+                    <div class="three wide  field">
+                    </div>
 
-          <div class="two wide field">
-            <label class="">มกราคม รับ (ดวง) </label>
-          </div>
-          <div class="three wide  field">
-            <input type="text" placeholder="" value="">
-          </div>
-          <div class="two wide field">
-          </div>
-          <div class="three wide  field">
-          </div>
-        </div>
-        <div class="inline fields">
-          <div class="three wide field">        
-          </div>
-          <div class="three wide  field">          
-          </div>
+                    <div class="two wide field">
 
-          <div class="two wide field">
-            <label class="">จ่าย (ดวง)  </label>    
+                    </div>
+                    <div class="three wide  field">
 
-          </div>
-          <div class="three wide  field">
-            <input type="text" placeholder="" value="">
-          </div>
-          <div class="two wide field">
-            <label class="custom-label-w-15">คงเหลือ ณ ปัจจุบัน จำนวนแสตมป์(ดวง)
-            </label>
-          </div>
-          <div class="three wide  field">
-            <input type="text" placeholder="" value="1">
-          </div>
-        </div>
-        <div class="inline fields">           
-          <div class="three wide field">
-              <label>หมายเหตุ</label></div>
-              <div class="three wide field">
-              <textarea style="width: 220px;height: 100px;"></textarea></div>
+                    </div>
+                    <div class="two wide field">
+                        <label class="">ค่าพิมพ์แสตมป์ (บาท) </label>
+                    </div>
+                    <div class="three wide  field">
+                        <input type="text" placeholder="" value="">
+                    </div>
+                </div>
+
+                <div class="inline fields">
+                    <div class="three wide field">
+                    </div>
+                    <div class="three wide  field">
+                    </div>
+
+                    <div class="two wide field">
+                        <label class="">มกราคม รับ (ดวง) </label>
+                    </div>
+                    <div class="three wide  field">
+                        <input type="text" placeholder="" value="">
+                    </div>
+                    <div class="two wide field">
+                    </div>
+                    <div class="three wide  field">
+                    </div>
+                </div>
+                <div class="inline fields">
+                    <div class="three wide field">
+                    </div>
+                    <div class="three wide  field">
+                    </div>
+
+                    <div class="two wide field">
+                        <label class="">มกราคม จ่าย (ดวง)  </label>
+
+                    </div>
+                    <div class="three wide  field">
+                        <input type="text" placeholder="" value="">
+                    </div>
+                    <div class="two wide field">
+                        <label class="custom-label-w-15">คงเหลือ ณ ปัจจุบัน จำนวนแสตมป์(ดวง)</label>
+                    </div>
+                    <div class="three wide  field">
+                        <input type="text" placeholder="" value="1">
+                    </div>
+                </div>
+                <div class="inline fields">
+                    <div class="three wide field">
+                        <label>หมายเหตุ</label>
+                    </div>
+                    <div class="eight wide field">
+                        <textarea style="resize: none;"></textarea>
+                    </div>
+                    <div class="two wide field">
+                        <label class="custom-label-w-15">ค่าพิมพ์แสตมป์ (บาท)</label>
+                    </div>
+                    <div class="three wide  field">
+                        <input type="text" placeholder="" value="1">
+                    </div>
+                </div>
+
             </div>
-            
-          </div>
-          <br>
+            <br>
 
-        <div class="ui center aligned grid">
-          <div class="sixteen wide column">
-            <button class="ui mini primary button ">
+            <div class="ui center aligned grid">
+                <div class="sixteen wide column">
+                    <button class="ui mini primary button ">
               บันทึก
             </button>
-            <button class="ui mini primary button">
+                    <button class="ui mini primary button">
               ยกเลิก
             </button>
-          </div>
+                </div>
+            </div>
         </div>
-      </div>
     </div>
