fix checked-box, change styles

--- a/workspace/ims-client/src/app/buckwaframework/project/pages/reports/tax-audit-reporting/ts01-01/ts01-01.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/reports/tax-audit-reporting/ts01-01/ts01-01.component.html
@@ -1,5 +1,5 @@
 <div class="ui top centered attached header segment"
-      style="background: lightblue">
+      style="background: #1e83db;color: white">
   <span>บันทึกผลการวิเคราะการชำระภาษีสรรพสามิต</span>
 </div>
 
@@ -107,7 +107,7 @@
               <div class="eight wide field">
                 <label class="custom-label-w-18">จึงเห็นสมควร</label>
                 <div class="ui checkbox">
-                  <input type="checkbox" class="hidden">
+                  <input type="checkbox">
                   <label>ขออนุมัติหนังสือเรียก</label>
                 </div>
               </div>
