-add mockup ts01-04,ts01-07,ts01-08

--- a/workspace/ims-client/src/app/buckwaframework/project/pages/reports/tax-audit-reporting/tax-audit-reporting.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/reports/tax-audit-reporting/tax-audit-reporting.component.html
@@ -61,4 +61,13 @@
 
     <app-ts01-02 *ngIf="sent && selectedTop == 'ตส. 01-02'" (discard)="onDiscard($event)" class="sixteen wide column segments">
     </app-ts01-02>
+
+    <app-ts01-04 *ngIf="sent && selectedTop == 'ตส. 01-04'" (discard)="onDiscard($event)" class="sixteen wide column segments">
+    </app-ts01-04>
+
+    <app-ts01-07 *ngIf="sent && selectedTop == 'ตส. 01-07'" (discard)="onDiscard($event)" class="sixteen wide column segments">
+    </app-ts01-07>
+
+    <app-ts01-08 *ngIf="sent && selectedTop == 'ตส. 01-08'" (discard)="onDiscard($event)" class="sixteen wide column segments">
+    </app-ts01-08>
 </form>
