--- a/workspace/ims-client/src/app/buckwaframework/project/pages/reports/tax-audit-reporting/tax-audit-reporting.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/reports/tax-audit-reporting/tax-audit-reporting.component.html
@@ -1,6 +1,6 @@
 <form class="ui grid" style="margin: 2%" (submit)="onSubmit()" ngNativeValidate>
     <div class="sixteen wide column segments">
-        <div class="ui top centered attached header segment" style="background: lightblue">
+        <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
             <span>จัดทำบันทึกข้อความ หนังสือราชการ และแบบ ตส.</span>
         </div>
 
@@ -56,18 +56,53 @@
         </div>
 
     </div>
-    <app-ts01-01 *ngIf="sent && selectedTop == 'ตส. 01-01'" (discard)="onDiscard($event)" class="sixteen wide column segments">
-    </app-ts01-01>
+    
+  <app-ts01-01
+    *ngIf="sent && selectedTop == 'ตส. 01-01'"
+    (discard)="onDiscard($event)"
+    class="sixteen wide column segments">
+  </app-ts01-01>
 
-    <app-ts01-02 *ngIf="sent && selectedTop == 'ตส. 01-02'" (discard)="onDiscard($event)" class="sixteen wide column segments">
-    </app-ts01-02>
+  <app-ts01-02
+    *ngIf="sent && selectedTop == 'ตส. 01-02'"
+    (discard)="onDiscard($event)"
+    class="sixteen wide column segments">
+  </app-ts01-02>
 
-    <app-ts01-04 *ngIf="sent && selectedTop == 'ตส. 01-04'" (discard)="onDiscard($event)" class="sixteen wide column segments">
-    </app-ts01-04>
+  <app-ts01-03
+    *ngIf="sent && selectedTop == 'ตส. 01-03'"
+    (discard)="onDiscard($event)"
+    class="sixteen wide column segments">
+  </app-ts01-03>
 
-    <app-ts01-07 *ngIf="sent && selectedTop == 'ตส. 01-07'" (discard)="onDiscard($event)" class="sixteen wide column segments">
-    </app-ts01-07>
+  <app-ts01-04
+    *ngIf="sent && selectedTop == 'ตส. 01-04'"
+    (discard)="onDiscard($event)"
+    class="sixteen wide column segments">
+  </app-ts01-04>
 
-    <app-ts01-08 *ngIf="sent && selectedTop == 'ตส. 01-08'" (discard)="onDiscard($event)" class="sixteen wide column segments">
-    </app-ts01-08>
+  <app-ts01-05
+    *ngIf="sent && selectedTop == 'ตส. 01-05'"
+    (discard)="onDiscard($event)"
+    class="sixteen wide column segments">
+  </app-ts01-05>
+
+  <app-ts01-07
+    *ngIf="sent && selectedTop == 'ตส. 01-07'"
+    (discard)="onDiscard($event)"
+    class="sixteen wide column segments">
+  </app-ts01-07>
+
+  <app-ts01-08
+    *ngIf="sent && selectedTop == 'ตส. 01-08'"
+    (discard)="onDiscard($event)"
+    class="sixteen wide column segments">
+  </app-ts01-08>
+
+  <app-ts01-10
+    *ngIf="sent && selectedTop == 'ตส. 01-10'"
+    (discard)="onDiscard($event)"
+    class="sixteen wide column segments">
+  </app-ts01-10>
+  
 </form>
