--- a/workspace/ims-client/src/app/buckwaframework/project/pages/reports/tax-audit-reporting/ts01-01/ts01-01.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/reports/tax-audit-reporting/ts01-01/ts01-01.component.html
@@ -76,15 +76,29 @@
               {{i+1}}.
             </label>
             <input type="text"> &nbsp;&nbsp;
-            <a disabled *ngIf="i<=2" class="mini ui button basic" style="box-shadow: none; cursor: default; color: transparent !important; box-shadow: 0 0 0 1px transparent inset!important;">ลบ</a>
-            <a *ngIf="i>2" class="mini ui button basic red" (click)="onDelField(i)" style="box-shadow: none; color: red !important; box-shadow: 0 0 0 1px transparent inset!important;">ลบ</a>
+            <a
+              disabled
+              *ngIf="i<=2"
+              style="width:16%;box-shadow: none; cursor: default; color: transparent !important; box-shadow: 0 0 0 1px transparent inset!important;">
+              <i class="times icon"></i> ลบเงื่อนไข
+            </a>
+            <a *ngIf="i>2"
+              class="red"
+              (click)="onDelField(i)"
+              style="width:16%;box-shadow: none; color: red !important; box-shadow: 0 0 0 1px transparent inset!important;cursor:pointer">
+              <i class="times icon"></i> ลบเงื่อนไข
+            </a>
           </div>
         </div>
 
         <div class="inline fields">
           <div class="sixteen wide field">
-            <a class="{{ numbers[numbers.length-1] == 5 && 'disabled'}} mini ui button basic red" (click)="onAddField()">เพิ่ม</a>
-            <span style="color: red">&nbsp;</span>
+            <a
+              style="cursor: pointer"
+              class="{{ numbers[numbers.length-1] == 5 && 'disabled'}} red"
+              (click)="onAddField()">
+                <i class="plus icon"></i> เพิ่มเงื่อนไข
+              </a>
           </div>
         </div>
 
