--- a/workspace/ims-client/src/app/buckwaframework/project/pages/reports/tax-audit-reporting/ts01-08/ts01-08.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/reports/tax-audit-reporting/ts01-08/ts01-08.component.html
@@ -1,4 +1,6 @@
-<div class="ui top centered attached header segment" style="background: lightblue">
+<div
+    class="ui top centered attached header segment"
+    style="background: #1e83db;color: white">
     <span>สมุดสั่งการออกตรวจสอบภาษีสรรพสามิต</span>
 </div>
 
