--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/create-working-paper-trader/create-working-paper-trader.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/create-working-paper-trader/create-working-paper-trader.component.html
@@ -44,29 +44,25 @@
 
         <div class="inline fields">
             <div class="three wide field ">
-                <label>กำหนดเงื่อนไข</label>
-              </div>
+                <label>กำหนดเงื่อนไข</label></div>
           <div class="three wide field ">
             <label>จำนวนเดือนที่ชำระภาษี</label>
           </div>
           <div class="two wide field ">
             <input name="" value="">
           </div>
-
           <div class="one wide field ">
             <label>&nbsp;&nbsp;&nbsp;ถึง&nbsp;</label>
           </div>
           <div class="two wide field ">
             <input name="" value="">
-          </div>
-         
+          </div>         
           <div class="five wide field ">
             <label>ช่วงร้อยละที่ต้องการแยกกลุ่มข้อมูล</label>
           </div>
           <div class="two wide field ">
             <input name="" value="">
           </div>
-
           <div class="one wide field ">
             <label>&nbsp;&nbsp;&nbsp;ถึง&nbsp;</label>
           </div>
