--- a/workspace/ims-client/src/app/buckwaframework/project/pages/reports/tax-audit-reporting/ts01-01/ts01-01.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/reports/tax-audit-reporting/ts01-01/ts01-01.component.html
@@ -2,10 +2,10 @@
   <span>บันทึกผลการวิเคราะการชำระภาษีสรรพสามิต</span>
 </div>
 
-<div class="ui attached segment">
+<div class="ui attached   segment">
   <div class="ui grid">
     <div class="ui two wide column">&nbsp;</div>
-    <div class="ui twelve wide column">
+    <div class="ui center aligned twelve wide column">
       <div class="ui form">
 
         <div class="inline fields">
@@ -71,7 +71,7 @@
         </div>
 
         <div class="inline fields" *ngFor="let num of numbers; let i = index" [attr.data-index]="i">
-          <div class="fourteen wide field">
+          <div class="fifteen wide field">
             <label class="custom-label-w-18">
               {{i+1}}.
             </label>
@@ -119,7 +119,7 @@
         </div>
         <div class="inline fields">
           <div class="fourteen wide field">
-            <textarea rows="4" style="width: 90%; resize: none"></textarea>
+            <textarea rows="4" style="width: 92%; resize: none"></textarea>
           </div>
         </div>
 
