--- a/workspace/ims-client/src/app/buckwaframework/project/pages/reports/tax-audit-reporting/ts01-10/ts01-10.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/reports/tax-audit-reporting/ts01-10/ts01-10.component.html
@@ -48,7 +48,7 @@
 
             <div class="inline fields">
               <div class="five wide field">
-                <label class="custom-label-w-18" style="width: 26% !important;">ข้าพเจ้า : </label>
+                <label class="custom-label-w-18" style="width: 36% !important;">ข้าพเจ้า : </label>
                 <input type="text" style="width: 100%">
               </div>
               <div class="three wide field">
@@ -148,7 +148,7 @@
               </div>
               <div class="five wide field">
                 <label class="custom-label-w-18" style="width: 35% !important;">ประเทศ : </label>
-                <input type="text" style="width: 100%">
+                <input type="text" style="width: 100%" value="ไทย">
               </div>
             </div>
 
@@ -165,8 +165,39 @@
 
             <div class="inline fields">
               <div class="eight wide field">
-                <label class="custom-label-w-18" style="width: 36% !important;">ทะเบียนสรรพสามิตเลขที่ :</label>
+                <label class="custom-label-w-18" style="width: 27% !important;">ทะเบียนสรรพสามิตเลขที่ : </label>
                 <input type="text" style="width: 100%">
+              </div>
+            </div>
+
+            <div class="inline fields">
+              <div class="eight wide field">
+                <label class="custom-label-w-18" style="width: 80% !important;">ให้การด้วยความสัตย์จริงต่อไปนี้ : </label>
+              </div>
+            </div>
+
+            <div class="inline fields">
+              <div class="sixteen wide field">
+                <textarea rows="4" style="width: 100%; resize: none"></textarea>
+              </div>
+            </div>
+
+            <div class="inline fields">
+              <div class="sixteen wide field">
+                <label class="custom-label-w-18" style="width: 18% !important;">แผ่นที่ : </label>
+                <input type="text" style="width: 100%;">
+              </div>
+            </div>
+
+            <div class="inline fields">
+              <div class="eight wide field">
+                <label class="custom-label-w-18" style="width: 80% !important;">คำให้การต่อ ของ : </label>
+              </div>
+            </div>
+
+            <div class="inline fields">
+              <div class="sixteen wide field">
+                <textarea rows="7" style="width: 100%; resize: none"></textarea>
               </div>
             </div>
 
