-add mock up ts01-13

--- a/workspace/ims-client/src/app/buckwaframework/project/pages/reports/tax-audit-reporting/tax-audit-reporting.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/reports/tax-audit-reporting/tax-audit-reporting.component.html
@@ -56,53 +56,32 @@
         </div>
 
     </div>
-    
-  <app-ts01-01
-    *ngIf="sent && selectedTop == 'ตส. 01-01'"
-    (discard)="onDiscard($event)"
-    class="sixteen wide column segments">
-  </app-ts01-01>
 
-  <app-ts01-02
-    *ngIf="sent && selectedTop == 'ตส. 01-02'"
-    (discard)="onDiscard($event)"
-    class="sixteen wide column segments">
-  </app-ts01-02>
+    <app-ts01-01 *ngIf="sent && selectedTop == 'ตส. 01-01'" (discard)="onDiscard($event)" class="sixteen wide column segments">
+    </app-ts01-01>
 
-  <app-ts01-03
-    *ngIf="sent && selectedTop == 'ตส. 01-03'"
-    (discard)="onDiscard($event)"
-    class="sixteen wide column segments">
-  </app-ts01-03>
+    <app-ts01-02 *ngIf="sent && selectedTop == 'ตส. 01-02'" (discard)="onDiscard($event)" class="sixteen wide column segments">
+    </app-ts01-02>
 
-  <app-ts01-04
-    *ngIf="sent && selectedTop == 'ตส. 01-04'"
-    (discard)="onDiscard($event)"
-    class="sixteen wide column segments">
-  </app-ts01-04>
+    <app-ts01-03 *ngIf="sent && selectedTop == 'ตส. 01-03'" (discard)="onDiscard($event)" class="sixteen wide column segments">
+    </app-ts01-03>
 
-  <app-ts01-05
-    *ngIf="sent && selectedTop == 'ตส. 01-05'"
-    (discard)="onDiscard($event)"
-    class="sixteen wide column segments">
-  </app-ts01-05>
+    <app-ts01-04 *ngIf="sent && selectedTop == 'ตส. 01-04'" (discard)="onDiscard($event)" class="sixteen wide column segments">
+    </app-ts01-04>
 
-  <app-ts01-07
-    *ngIf="sent && selectedTop == 'ตส. 01-07'"
-    (discard)="onDiscard($event)"
-    class="sixteen wide column segments">
-  </app-ts01-07>
+    <app-ts01-05 *ngIf="sent && selectedTop == 'ตส. 01-05'" (discard)="onDiscard($event)" class="sixteen wide column segments">
+    </app-ts01-05>
 
-  <app-ts01-08
-    *ngIf="sent && selectedTop == 'ตส. 01-08'"
-    (discard)="onDiscard($event)"
-    class="sixteen wide column segments">
-  </app-ts01-08>
+    <app-ts01-07 *ngIf="sent && selectedTop == 'ตส. 01-07'" (discard)="onDiscard($event)" class="sixteen wide column segments">
+    </app-ts01-07>
 
-  <app-ts01-10
-    *ngIf="sent && selectedTop == 'ตส. 01-10'"
-    (discard)="onDiscard($event)"
-    class="sixteen wide column segments">
-  </app-ts01-10>
-  
+    <app-ts01-08 *ngIf="sent && selectedTop == 'ตส. 01-08'" (discard)="onDiscard($event)" class="sixteen wide column segments">
+    </app-ts01-08>
+
+    <app-ts01-10 *ngIf="sent && selectedTop == 'ตส. 01-10'" (discard)="onDiscard($event)" class="sixteen wide column segments">
+    </app-ts01-10>
+
+    <app-ts01-13 *ngIf="sent && selectedTop == 'ตส. 01-13'" (discard)="onDiscard($event)" class="sixteen wide column segments">
+    </app-ts01-13>
+
 </form>
