--- a/workspace/ims-client/src/app/buckwaframework/project/pages/reports/tax-audit-reporting/ts01-07/ts01-07.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/reports/tax-audit-reporting/ts01-07/ts01-07.component.html
@@ -1,6 +1,4 @@
-<div
-    class="ui top centered attached header segment"
-    style="background: #1e83db;color: white">
+<div class="ui top centered attached header segment" style="background: #1e83db;color: white">
     <span>หนังสือนำตัวออกตรวจการเสียภาษีสรรพสามิต</span>
 </div>
 
@@ -188,7 +186,6 @@
                     <div class="eleven wide field">
                         <p>ณ</p>
                         <div class="ui checkbox">
-
                             <input type="checkbox" name="example">
                             <label>โรงงานอุตสาหกรรม</label>
                         </div>
