--- a/workspace/ims-client/src/app/buckwaframework/project/pages/reports/tax-audit-reporting/ts01-03/ts01-03.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/reports/tax-audit-reporting/ts01-03/ts01-03.component.html
@@ -82,11 +82,11 @@
             </div>
 
             <div class="inline fields">
-              <div class="eight wide field">
-                <label class="custom-label-w-22">อาศัยอำนาจตามความในมาตรา</label>
+              <div class="ten wide field">
+                <label class="custom-label-w-30">อาศัยอำนาจตามความในมาตรา</label>
                 <input type="text" style="width: 100%">
               </div>
-              <div class="eight wide field">
+              <div class="six wide field">
                 <label class="custom-label-w-18">หมวด</label>
                 <input type="text" style="width: 100%">
               </div>
