--- a/workspace/ims-client/src/app/buckwaframework/project/pages/reports/tax-audit-reporting/ts01-10/ts01-10.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/reports/tax-audit-reporting/ts01-10/ts01-10.component.html
@@ -10,17 +10,25 @@
           <div class="ui form">
 
             <div class="inline fields">
-              <div class="eight wide field">
-                  &nbsp;
+              <div class="seven wide field">
               </div>
-              <div class="eight wide field">
-                <label class="custom-label-w-18" style="width: 20% !important;">วันที่</label>
-                <div class="ui calendar" style="width:100%" id="begin_date">
-                  <div class="ui input left icon">
-                    <i class="calendar icon"></i>
-                    <input type="text" style="width:100%" placeholder="วัน/เดือน/ปี">
-                  </div>
-                </div>
+              <div class="one wide field">
+                <p>วันที่ : </p>
+              </div>
+              <div class="two wide field">
+                <input type="text">
+              </div>
+              <div class="one wide field" style="padding-right: 0px;">
+                <p>เดือน : </p>
+              </div>
+              <div class="two wide field">
+                <input type="text">
+              </div>
+              <div class="one wide field">
+                <p>ปี : </p>
+              </div>
+              <div class="two wide field">
+                <input type="text">
               </div>
             </div>
 
