--- a/workspace/ims-client/src/app/buckwaframework/project/pages/reports/tax-audit-reporting/tax-audit-reporting.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/reports/tax-audit-reporting/tax-audit-reporting.component.html
@@ -95,5 +95,8 @@
 
     <app-ts01-13 *ngIf="sent && selectedTop == 'ตส. 01-13'" (discard)="onDiscard($event)" class="sixteen wide column segments">
     </app-ts01-13>
+
+    <app-ts01-14-1 *ngIf="sent && selectedTop == 'ตส. 01-14/1'" (discard)="onDiscard($event)" class="sixteen wide column segments">
+    </app-ts01-14-1>
   
 </form>
