--- a/workspace/ims-client/src/app/buckwaframework/project/pages/reports/tax-audit-reporting/ts01-11/ts01-11.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/reports/tax-audit-reporting/ts01-11/ts01-11.component.html
@@ -138,17 +138,27 @@
                         <th>รายการ</th>
                         <th>จำนวน</th>
                         <th>หมายเหตุ</th>
+                        <th>#</th>
                       </tr>
                     </thead>
                     <tbody>
-                      <tr>
-                        <td>A</td>
-                        <td>A</td>
-                        <td>A</td>
-                        <td>A</td>
+                      <tr *ngFor="let number of numbers; let i = index">
+                        <td>{{i+1}}</td>
+                        <td><input type="text" name="" id=""></td>
+                        <td><input type="text" name="" id=""></td>
+                        <td><input type="text" name="" id=""></td>
+                        <td style="cursor: pointer" (click)="onDelField(i)">
+                          <a style="text-decoration: none;color: red" *ngIf="(i+1) > 3">ลบ</a>
+                        </td>
                       </tr>
                     </tbody>
                 </table>
+              </div>
+            </div>
+
+            <div class="inline fields">
+              <div class="sixteen wide field">
+                <a (click)="onAddField()" style="cursor: pointer"><i class="plus icon"></i> เพิ่ม</a>
               </div>
             </div>
 
