--- a/workspace/ims-client/src/app/buckwaframework/project/pages/reports/tax-audit-reporting/tax-audit-reporting.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/reports/tax-audit-reporting/tax-audit-reporting.component.html
@@ -93,8 +93,19 @@
     <app-ts01-14-1 *ngIf="sent && selectedTop == 'ตส. 01-14/1'" (discard)="onDiscard($event)" class="sixteen wide column segments">
     </app-ts01-14-1>
 
-
     <app-ts01-14 *ngIf="sent && selectedTop == 'ตส. 01-14'" (discard)="onDiscard($event)" class="sixteen wide column segments">
     </app-ts01-14>
+
+    <app-ts01-15 *ngIf="sent && selectedTop == 'ตส. 01-15'" (discard)="onDiscard($event)" class="sixteen wide column segments">
+    </app-ts01-15>
+
+    <app-ts01-16 *ngIf="sent && selectedTop == 'ตส. 01-16'" (discard)="onDiscard($event)" class="sixteen wide column segments">
+    </app-ts01-16>
+
+    <app-ts01-16 *ngIf="sent && selectedTop == 'ตส. 01-16'" (discard)="onDiscard($event)" class="sixteen wide column segments">
+    </app-ts01-16>
+
+    <app-ts01-19 *ngIf="sent && selectedTop == 'ตส. 01-19'" (discard)="onDiscard($event)" class="sixteen wide column segments">
+    </app-ts01-19>
 
 </form>
