--- a/workspace/ims-client/src/app/buckwaframework/project/pages/reports/tax-audit-reporting/ts01-10/ts01-10.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/reports/tax-audit-reporting/ts01-10/ts01-10.component.html
@@ -1,212 +1,211 @@
-<div class="ui top centered attached header segment"
-      style="background: #1e83db;color: white">
-  <span>คำให้การ</span>
+<div class="ui top centered attached header segment" style="background: #1e83db;color: white">
+    <span>ใบรับมอบและส่งมอบบัญชี และเอกสาร</span>
 </div>
 
 <div class="ui attached segment">
     <div class="ui grid">
-      <div class="ui two wide column">&nbsp;</div>
-      <div class="ui twelve wide column">
-          <div class="ui form">
+        <div class="ui two wide column">&nbsp;</div>
+        <div class="ui twelve wide column">
+            <div class="ui form">
 
-            <div class="inline fields">
-              <div class="seven wide field">
-              </div>
-              <div class="one wide field">
-                <p>วันที่ : </p>
-              </div>
-              <div class="two wide field">
-                <input type="text">
-              </div>
-              <div class="one wide field" style="padding-right: 0px;">
-                <p>เดือน : </p>
-              </div>
-              <div class="two wide field">
-                <input type="text">
-              </div>
-              <div class="one wide field">
-                <p>ปี : </p>
-              </div>
-              <div class="two wide field">
-                <input type="text">
-              </div>
+                <div class="inline fields">
+                    <div class="seven wide field">
+                    </div>
+                    <div class="one wide field">
+                        <p>วันที่ : </p>
+                    </div>
+                    <div class="two wide field">
+                        <input type="text">
+                    </div>
+                    <div class="one wide field" style="padding-right: 0px;">
+                        <p>เดือน : </p>
+                    </div>
+                    <div class="two wide field">
+                        <input type="text">
+                    </div>
+                    <div class="one wide field">
+                        <p>ปี : </p>
+                    </div>
+                    <div class="two wide field">
+                        <input type="text">
+                    </div>
+                </div>
+
+                <div class="inline fields">
+                    <div class="eight wide field">
+                        <label class="custom-label-w-18" style="width: 10% !important;">ของ : </label>
+                        <input type="text" style="width: 100%">
+                    </div>
+                    <div class="eight wide field">
+                        <label class="custom-label-w-18" style="width: 12% !important;">เรื่อง : </label>
+                        <input type="text" style="width: 100%">
+                    </div>
+                </div>
+
+                <div class="inline fields">
+                    <div class="eight wide field">
+                        <label class="custom-label-w-18" style="width: 30% !important;">ได้ให้การต่อ : </label>
+                        <input type="text" style="width: 100%">
+                    </div>
+                    <div class="eight wide field">
+                        <label class="custom-label-w-18" style="width: 20% !important;">ตำแหน่ง : </label>
+                        <input type="text" style="width: 100%">
+                    </div>
+                </div>
+
+                <div class="inline fields">
+                    <div class="five wide field">
+                        <label class="custom-label-w-18" style="width: 36% !important;">ข้าพเจ้า : </label>
+                        <input type="text" style="width: 100%">
+                    </div>
+                    <div class="three wide field">
+                        <label class="custom-label-w-18" style="width: 75% !important;">อายุ : </label>
+                        <input type="text" style="width: 100%">
+                    </div>
+                    <div class="four wide field">
+                        <label class="custom-label-w-18" style="width: 75% !important;">สัญชาติ : </label>
+                        <input type="text" style="width: 100%">
+                    </div>
+                    <div class="four wide field">
+                        <label class="custom-label-w-18" style="width: 80% !important;">เชื่อชาติ : </label>
+                        <input type="text" style="width: 100%">
+                    </div>
+                </div>
+
+                <div class="inline fields">
+                    <div class="four wide field">
+                        <label class="custom-label-w-18" style="width: 75% !important;">ที่อยู่เลขที่ : </label>
+                        <input type="text" style="width: 100%">
+                    </div>
+                    <div class="six wide field">
+                        <label class="custom-label-w-18" style="width: 60% !important;">อาคาร/หมู่บ้าน : </label>
+                        <input type="text" style="width: 100%">
+                    </div>
+                    <div class="four wide field">
+                        <label class="custom-label-w-18" style="width: 175% !important;">ห้องเลขที่ : </label>
+                        <input type="text" style="width: 100%">
+                    </div>
+                    <div class="two wide field">
+                        <label class="custom-label-w-18" style="width: 100% !important;">ชั้น : </label>
+                        <input type="text" style="width: 100%">
+                    </div>
+                </div>
+
+                <div class="inline fields">
+                    <div class="six wide field">
+                        <label class="custom-label-w-18" style="width: 45% !important;">ตรอก/ซอย : </label>
+                        <input type="text" style="width: 100%">
+                    </div>
+                    <div class="four wide field">
+                        <label class="custom-label-w-18" style="width: 27% !important;">ถนน : </label>
+                        <input type="text" style="width: 100%">
+                    </div>
+                    <div class="six wide field">
+                        <label class="custom-label-w-18" style="width: 45% !important;">ตำบล/แขวง : </label>
+                        <input type="text" style="width: 100%">
+                    </div>
+                </div>
+
+                <div class="inline fields">
+                    <div class="eight wide field">
+                        <label class="custom-label-w-18" style="width: 30% !important;">อำเภอ/แขวง : </label>
+                        <input type="text" style="width: 100%">
+                    </div>
+                    <div class="eight wide field">
+                        <label class="custom-label-w-18" style="width: 18% !important;">จังหวัด : </label>
+                        <input type="text" style="width: 100%">
+                    </div>
+                </div>
+
+                <div class="inline fields">
+                    <div class="six wide field">
+                        <label class="custom-label-w-18" style="width: 52% !important;">รหัสไปรษณีย์ : </label>
+                        <input type="text" style="width: 100%">
+                    </div>
+                    <div class="six wide field">
+                        <label class="custom-label-w-18" style="width: 30% !important;">โทรศัพท์ : </label>
+                        <input type="text" style="width: 100%">
+                    </div>
+                </div>
+
+                <div class="inline fields">
+                    <div style="width: 22%" class="ui checkbox">
+                        <input type="checkbox">
+                        <label>บัตรประจำตัวประชาชน&nbsp;&nbsp;&nbsp;&nbsp;</label>
+                    </div>
+                    <div style="width: 16%" class="ui checkbox">
+                        <input type="checkbox">
+                        <label>หนังสือเดินทาง&nbsp;&nbsp;&nbsp;&nbsp;</label>
+                    </div>
+                    <div style="width: 16%" class="ui checkbox">
+                        <input type="checkbox">
+                        <label>บัตรอื่นๆ (ระบุ)&nbsp;&nbsp;&nbsp;&nbsp;</label>
+                    </div>
+                    <input style="width: 32%" type="text">
+                </div>
+
+                <div class="inline fields">
+                    <div class="six wide field">
+                        <label class="custom-label-w-18" style="width: 18% !important;">เลขที่ : </label>
+                        <input type="text" style="width: 100%">
+                    </div>
+                    <div class="five wide field">
+                        <label class="custom-label-w-18" style="width: 45% !important;">ออกให้ ณ : </label>
+                        <input type="text" style="width: 100%">
+                    </div>
+                    <div class="five wide field">
+                        <label class="custom-label-w-18" style="width: 35% !important;">ประเทศ : </label>
+                        <input type="text" style="width: 100%" value="ไทย">
+                    </div>
+                </div>
+
+                <div class="inline fields">
+                    <div class="eight wide field">
+                        <label class="custom-label-w-18" style="width: 36% !important;">โดยมีฐานะเป็น : </label>
+                        <input type="text" style="width: 100%">
+                    </div>
+                    <div class="eight wide field">
+                        <label class="custom-label-w-18" style="width: 10% !important;">ของ : </label>
+                        <input type="text" style="width: 100%">
+                    </div>
+                </div>
+
+                <div class="inline fields">
+                    <div class="eight wide field">
+                        <label class="custom-label-w-18" style="width: 27% !important;">ทะเบียนสรรพสามิตเลขที่ : </label>
+                        <input type="text" style="width: 100%">
+                    </div>
+                </div>
+
+                <div class="inline fields">
+                    <div class="eight wide field">
+                        <label class="custom-label-w-18" style="width: 80% !important;">ให้การด้วยความสัตย์จริงต่อไปนี้ : </label>
+                    </div>
+                </div>
+
+                <div class="inline fields">
+                    <div class="sixteen wide field">
+                        <textarea rows="4" style="width: 100%; resize: none"></textarea>
+                    </div>
+                </div>
+
             </div>
-
-            <div class="inline fields">
-              <div class="eight wide field">
-                <label class="custom-label-w-18" style="width: 10% !important;">ของ : </label>
-                <input type="text" style="width: 100%">
-              </div>
-              <div class="eight wide field">
-                <label class="custom-label-w-18" style="width: 12% !important;">เรื่อง : </label>
-                <input type="text" style="width: 100%">
-              </div>
-            </div>
-
-            <div class="inline fields">
-              <div class="eight wide field">
-                <label class="custom-label-w-18" style="width: 30% !important;">ได้ให้การต่อ : </label>
-                <input type="text" style="width: 100%">
-              </div>
-              <div class="eight wide field">
-                <label class="custom-label-w-18" style="width: 20% !important;">ตำแหน่ง : </label>
-                <input type="text" style="width: 100%">
-              </div>
-            </div>
-
-            <div class="inline fields">
-              <div class="five wide field">
-                <label class="custom-label-w-18" style="width: 36% !important;">ข้าพเจ้า : </label>
-                <input type="text" style="width: 100%">
-              </div>
-              <div class="three wide field">
-                <label class="custom-label-w-18" style="width: 75% !important;">อายุ : </label>
-                <input type="text" style="width: 100%">
-              </div>
-              <div class="four wide field">
-                <label class="custom-label-w-18" style="width: 75% !important;">สัญชาติ : </label>
-                <input type="text" style="width: 100%">
-              </div>
-              <div class="four wide field">
-                <label class="custom-label-w-18" style="width: 80% !important;">เชื่อชาติ : </label>
-                <input type="text" style="width: 100%">
-              </div>
-            </div>
-
-            <div class="inline fields">
-              <div class="four wide field">
-                <label class="custom-label-w-18" style="width: 75% !important;">ที่อยู่เลขที่ : </label>
-                <input type="text" style="width: 100%">
-              </div>
-              <div class="six wide field">
-                <label class="custom-label-w-18" style="width: 60% !important;">อาคาร/หมู่บ้าน : </label>
-                <input type="text" style="width: 100%">
-              </div>
-              <div class="four wide field">
-                <label class="custom-label-w-18" style="width: 175% !important;">ห้องเลขที่ : </label>
-                <input type="text" style="width: 100%">
-              </div>
-              <div class="two wide field">
-                <label class="custom-label-w-18" style="width: 100% !important;">ชั้น : </label>
-                <input type="text" style="width: 100%">
-              </div>
-            </div>
-
-            <div class="inline fields">
-              <div class="six wide field">
-                <label class="custom-label-w-18" style="width: 45% !important;">ตรอก/ซอย : </label>
-                <input type="text" style="width: 100%">
-              </div>
-              <div class="four wide field">
-                <label class="custom-label-w-18" style="width: 27% !important;">ถนน : </label>
-                <input type="text" style="width: 100%">
-              </div>
-              <div class="six wide field">
-                <label class="custom-label-w-18" style="width: 45% !important;">ตำบล/แขวง : </label>
-                <input type="text" style="width: 100%">
-              </div>
-            </div>
-
-            <div class="inline fields">
-              <div class="eight wide field">
-                <label class="custom-label-w-18" style="width: 30% !important;">อำเภอ/แขวง : </label>
-                <input type="text" style="width: 100%">
-              </div>
-              <div class="eight wide field">
-                <label class="custom-label-w-18" style="width: 18% !important;">จังหวัด : </label>
-                <input type="text" style="width: 100%">
-              </div>
-            </div>
-
-            <div class="inline fields">
-              <div class="six wide field">
-                <label class="custom-label-w-18" style="width: 52% !important;">รหัสไปรษณีย์ : </label>
-                <input type="text" style="width: 100%">
-              </div>
-              <div class="six wide field">
-                <label class="custom-label-w-18" style="width: 30% !important;">โทรศัพท์ : </label>
-                <input type="text" style="width: 100%">
-              </div>
-            </div>
-
-            <div class="inline fields">
-              <div style="width: 22%" class="ui checkbox">
-                <input type="checkbox">
-                <label>บัตรประจำตัวประชาชน&nbsp;&nbsp;&nbsp;&nbsp;</label>
-              </div>
-              <div style="width: 16%" class="ui checkbox">
-                <input type="checkbox">
-                <label>หนังสือเดินทาง&nbsp;&nbsp;&nbsp;&nbsp;</label>
-              </div>
-              <div style="width: 16%" class="ui checkbox">
-                <input type="checkbox">
-                <label>บัตรอื่นๆ (ระบุ)&nbsp;&nbsp;&nbsp;&nbsp;</label>
-              </div>
-              <input style="width: 32%" type="text">
-            </div>
-
-            <div class="inline fields">
-              <div class="six wide field">
-                <label class="custom-label-w-18" style="width: 18% !important;">เลขที่ : </label>
-                <input type="text" style="width: 100%">
-              </div>
-              <div class="five wide field">
-                <label class="custom-label-w-18" style="width: 45% !important;">ออกให้ ณ : </label>
-                <input type="text" style="width: 100%">
-              </div>
-              <div class="five wide field">
-                <label class="custom-label-w-18" style="width: 35% !important;">ประเทศ : </label>
-                <input type="text" style="width: 100%" value="ไทย">
-              </div>
-            </div>
-
-            <div class="inline fields">
-              <div class="eight wide field">
-                <label class="custom-label-w-18" style="width: 36% !important;">โดยมีฐานะเป็น : </label>
-                <input type="text" style="width: 100%">
-              </div>
-              <div class="eight wide field">
-                <label class="custom-label-w-18" style="width: 10% !important;">ของ : </label>
-                <input type="text" style="width: 100%">
-              </div>
-            </div>
-
-            <div class="inline fields">
-              <div class="eight wide field">
-                <label class="custom-label-w-18" style="width: 27% !important;">ทะเบียนสรรพสามิตเลขที่ : </label>
-                <input type="text" style="width: 100%">
-              </div>
-            </div>
-
-            <div class="inline fields">
-              <div class="eight wide field">
-                <label class="custom-label-w-18" style="width: 80% !important;">ให้การด้วยความสัตย์จริงต่อไปนี้ : </label>
-              </div>
-            </div>
-
-            <div class="inline fields">
-              <div class="sixteen wide field">
-                <textarea rows="4" style="width: 100%; resize: none"></textarea>
-              </div>
-            </div>
-
-          </div>
-      </div>
-      <div class="ui two wide column">&nbsp;</div>
+        </div>
+        <div class="ui two wide column">&nbsp;</div>
     </div>
 </div>
 
 <div class="ui bottom centered attached segment">
-  <div class="ui center aligned grid">
-      <div class="eight wide column">
-        <button class="ui mini green button" type="button">
+    <div class="ui center aligned grid">
+        <div class="eight wide column">
+            <button class="ui mini green button" type="button">
           <i class="save icon"></i>
           พิมพ์เอกสาร
         </button>
-        <button class="ui mini red button" type="button" (click)="onDiscard()">
+            <button class="ui mini red button" type="button" (click)="onDiscard()">
           <i class="times icon"></i>
           ยกเลิก
         </button>
+        </div>
     </div>
-  </div>
 </div>
