--- a/workspace/ims-client/src/app/buckwaframework/project/pages/reports/tax-audit-reporting/ts01-13/ts01-13.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/reports/tax-audit-reporting/ts01-13/ts01-13.component.html
@@ -1,5 +1,5 @@
 <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
-    <span>หนังสือนำตัวออกตรวจการเสียภาษีสรรพสามิต</span>
+    <span>บันทึกผลการตรวจการเสียภาษีสรรพสามิต</span>
 </div>
 
 <div class="ui attached segment">
