--- a/workspace/ims-client/src/app/app.component.html
+++ b/workspace/ims-client/src/app/app.component.html
@@ -165,3 +165,18 @@
         <div class="ui approve button">OK</div>
     </div>
 </div>
+
+<div id="alert" class="ui mini modal transition hidden">
+    <div class="ui header">
+        เกิดข้อผิดพลาด
+    </div>
+    <div class="content">
+        <p></p>
+    </div>
+    <div class="actions">
+        <div class="ui green mini cancel inverted button">
+        <i class="remove icon"></i>
+        โอเค
+        </div>
+    </div>
+</div>
